tests/errors/E011.zen
int main() {
    return -bool;   // E011: Negation of non-numeric type
}